--- a/AuthServer/src/server/Core/AuthServer.Application/AuthServer.Application.csproj
+++ b/AuthServer/src/server/Core/AuthServer.Application/AuthServer.Application.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AuthServer.Domain\AuthServer.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
