feat: add product repository

--- a/AuthServer/src/server/Infrastructure/AuthServer.Persistence/AuthServer.Persistence.csproj
+++ b/AuthServer/src/server/Infrastructure/AuthServer.Persistence/AuthServer.Persistence.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Core\AuthServer.Application\AuthServer.Application.csproj" />
     <ProjectReference Include="..\..\Core\AuthServer.Domain\AuthServer.Domain.csproj" />
   </ItemGroup>
 
