--- a/AuthServer/src/server/Presentation/AuthServer.API/AuthServer.API.csproj
+++ b/AuthServer/src/server/Presentation/AuthServer.API/AuthServer.API.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>73005593-ea2d-43a2-8833-e838a433977d</UserSecretsId>
   </PropertyGroup>
   
   <ItemGroup>
@@ -12,6 +13,11 @@
   
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\AuthServer.Application\AuthServer.Application.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\AuthServer.Persistence\AuthServer.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
