--- a/AuthServer/src/server/Infrastructure/AuthServer.Infrastructure/AuthServer.Infrastructure.csproj
+++ b/AuthServer/src/server/Infrastructure/AuthServer.Infrastructure/AuthServer.Infrastructure.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="10.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="10.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.2.1" />
   </ItemGroup>
 
   <ItemGroup>
