--- a/AuthServer/src/server/Presentation/AuthServer.API/AuthServer.API.csproj
+++ b/AuthServer/src/server/Presentation/AuthServer.API/AuthServer.API.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.0">
       <PrivateAssets>all</PrivateAssets>
