--- a/AuthServer/src/Commons/SharedLibrary/SharedLibrary.csproj
+++ b/AuthServer/src/Commons/SharedLibrary/SharedLibrary.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="DTOs\" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.0" />
   </ItemGroup>
 
 </Project>
